--- a/views/client.handlebars
+++ b/views/client.handlebars
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript" /></script>
+    <script src="app.js" type="text/javascript"></script>
 
   <body>
-    a_template!
+    <div id="container"></div>
   </body>
 </html>
