--- a/views/client.handlebars
+++ b/views/client.handlebars
@@ -6,7 +6,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript" /></script>
-    <script src="app.js" type="text/javascript"></script>
+    <script src="lib/bundle.js" type="text/javascript"></script>
 
   <body>
     <div id="container"></div>
