massive commit to get backbone routes/sub-views working

--- a/app/views/templates/projectsTemplate.hbs
+++ b/app/views/templates/projectsTemplate.hbs
@@ -1,8 +1,7 @@
   <div class="view">
-    Projects: 
     <ul>
       {{#each this}}
-        <li>{{ id }} {{ name }}</li>
+        <li class="project"><a href="#" id="{{ id }}">{{ id }}</a></li>
       {{/each}}
     </ul>
   </div> 
