Now using shotCollection for rendering groups of shots

--- a/app/views/templates/projectTemplate.hbs
+++ b/app/views/templates/projectTemplate.hbs
@@ -1,5 +1,9 @@
-  <div class="view">
-    <h1>{{ id }}
+<div class="view">
+    <h1>{{ id }}</h1>
+
+    <label><h3>What are you working on?</h3></label>
+    <input id="text" type="textarea" class"input" placeholder="My latest work" autofocus>
+    <button class="save">save</button>
 
     <ul class="shots">
     </ul>
