--- a/app/views/templates/projectsTemplate.hbs
+++ b/app/views/templates/projectsTemplate.hbs
@@ -1,5 +1,8 @@
   <div class="view">
-    <ul>
+    <label><h3>Create a Project</h3></label>
+    <input id="name" type="textarea" class"input" placeholder="" autofocus>
+    <button class="save">save</button>
+    <ul class="projects">
       {{#each this}}
         <li class="project"><a href="#" id="{{ id }}">{{ id }}</a></li>
       {{/each}}
