Single shot view now works properly

--- a/app/views/templates/shotTemplate.hbs
+++ b/app/views/templates/shotTemplate.hbs
@@ -1,6 +1,6 @@
 <li id="{{ id }}" class="shot">
   {{#if id }}
-    <a href="/#{{ project }}/{{ id }}" class="shotlink" id="{{ project }}/{{ id }}">Shot {{ id }}
+    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Shot {{ id }}
     </a>
   {{else}}
     New Shot
