--- a/app/views/templates/shotsTemplate.hbs
+++ b/app/views/templates/shotsTemplate.hbs
@@ -1,3 +1,5 @@
     <label><h3>What are you working on?</h3></label>
     <input id="text" type="textarea" class"input" placeholder="My latest work" autofocus>
     <button class="save">save</button>
+    <ul class="shots">
+    </ul>
