Save button now properly fires

--- a/app/views/templates/shotsTemplate.hbs
+++ b/app/views/templates/shotsTemplate.hbs
@@ -1,6 +1,6 @@
     <label><h3>What are you working on?</h3></label>
-    <input id="text" type="textarea" class"input" placeholder="My latest work" autofocus>
-    <button class="save">save</button>
+    <input id="text" type="textarea" class="input" placeholder="My latest work" autofocus>
+    <button id="createShot">save</button>
     <ul class="shotList">
         {{#each this}}
             <li id="{{ id }}" class="shot">
