--- a/app/views/templates/shotsTemplate.hbs
+++ b/app/views/templates/shotsTemplate.hbs
@@ -1,5 +1,6 @@
     <label><h3>What are you working on?</h3></label>
-    <input id="text" type="textarea" class="input" placeholder="My latest work" autofocus>
+    <input id="image" type="url" class="input" size="58" placeholder="Enter a URL to an image"><br />
+    <textarea id="text" type="text" maxlength="80" class="input" placeholder="Enter any additional info" autofocus /><br />
     <button id="createShot">save</button>
     <ul class="shotList">
         {{#each this}}
