--- a/app/views/templates/shotTemplate.hbs
+++ b/app/views/templates/shotTemplate.hbs
@@ -1,5 +1,5 @@
 <li id="{{ id }}" class="shot">
-    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Shot {{ id }}</a>
+    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted at {{ time }}</a>
     <a href="http://twitter.com/{{ author }}" target="_blank">{{ author }}</a>
     <p>{{ text }}</p>
     <img src="{{ image }}">
