Timestamp looks much sexier

--- a/app/views/templates/shotTemplate.hbs
+++ b/app/views/templates/shotTemplate.hbs
@@ -1,6 +1,6 @@
 <li id="{{ id }}" class="shot">
-    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted at {{ time }}</a>
+    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }}</a><br />
     <a href="http://twitter.com/{{ author }}" target="_blank">{{ author }}</a>
-    <p>{{ text }}</p>
     <img src="{{ image }}">
+    <p>{{ text }}</p>
 </li>
