--- a/app/views/templates/shotsTemplate.hbs
+++ b/app/views/templates/shotsTemplate.hbs
@@ -5,10 +5,10 @@
     <ul class="shotList">
         {{#each this}}
             <li id="{{ id }}" class="shot">
-                <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Shot {{ time }}</a>
+                <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }}</a><br />
                 <a href="http://twitter.com/{{ author }}" target="_blank">{{ author }}</a>
-                <p>{{ text }}</p>
                 <img src="{{ image }}">
+                <p>{{ text }}</p>
             </li>
         {{/each}}
     </ul>
