--- a/views/client.handlebars
+++ b/views/client.handlebars
@@ -8,6 +8,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backfire/0.3.0/backbone-firebase.js"></script>
+    <script type='text/javascript'
+        src='https://cdn.firebase.com/js/simple-login/1.2.5/firebase-simple-login.js'></script>
     <script src="lib/bundle.js" type="text/javascript"></script>
 
   <body>
