--- a/app/views/templates/navTemplate.hbs
+++ b/app/views/templates/navTemplate.hbs
@@ -1,4 +1,4 @@
-  <a href="/#" id="home">Home</a> | New Project | 
+  <a href="/#" id="home">Home</a> | 
   {{#if username}}
   {{! Check if user is logged in }}
     <a href="#" id="username">@{{username}}</a> | 
