New shots now properly appear at the top of the list.

--- a/app/views/templates/shotTemplate.hbs
+++ b/app/views/templates/shotTemplate.hbs
@@ -1,5 +1,5 @@
 <li id="{{ id }}" class="shot">
-    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }}</a><br />
+    <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
     <a href="http://twitter.com/{{ author }}" target="_blank">{{ author }}</a>
     <img src="{{ image }}">
     <p>{{ text }}</p>
