--- a/app/views/templates/shotsTemplate.hbs
+++ b/app/views/templates/shotsTemplate.hbs
@@ -5,8 +5,7 @@
     <ul class="shotList">
         {{#each this}}
             <li id="{{ id }}" class="shot">
-                <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }}</a><br />
-                <a href="http://twitter.com/{{ author }}" target="_blank">{{ author }}</a>
+                <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
                 <img src="{{ image }}">
                 <p>{{ text }}</p>
             </li>
