--- a/views/client.handlebars
+++ b/views/client.handlebars
@@ -11,6 +11,7 @@
     <script type='text/javascript'
         src='https://cdn.firebase.com/js/simple-login/1.2.5/firebase-simple-login.js'></script>
     <script src="lib/bundle.js" type="text/javascript"></script>
+    <link href="css/screen.css" media="all" rel="stylesheet" type="text/css" />
 
   <body>
     <header>
