--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -7,3 +7,5 @@
 
 /* Custom Partials */
 @import "_variables.scss";	// Variables: Color, size, etc. 
+@import "_images.scss";     // Anything related to images
+// Trey - Feel free to re-organize this structure however you see fit.
