Can now view or add comments for a shot from a Project or Shot page

--- a/app/views/templates/shotTemplate.hbs
+++ b/app/views/templates/shotTemplate.hbs
@@ -3,4 +3,6 @@
   <img src="{{ image }}" class="shot">
   <p>{{ text }}</p>
   <p><a href="#" id="deleteShot" data-id="{{ id }}">delete</a></p>
+  <ul id="{{ id }}" class="comments">
+  </ul>
 </li>
