--- a/app/views/templates/shotsTemplate.hbs
+++ b/app/views/templates/shotsTemplate.hbs
@@ -2,5 +2,5 @@
     <input id="image" type="url" class="input" size="58" placeholder="Enter a URL to an image"><br />
     <textarea id="text" type="text" maxlength="80" class="input" placeholder="Enter any additional info" autofocus /><br />
     <button id="createShot">save</button>
-    <ul class="shotList">
+    <ul class="shots">
     </ul>
