--- a/app/views/templates/commentsTemplate.hbs
+++ b/app/views/templates/commentsTemplate.hbs
@@ -1,5 +1,5 @@
     <label><h3>{{ this.length }} {{pluralize this.length 'Comment' 'Comments'}}</h3></label>
-    <textarea id="text" type="text" class="input" placeholder="Enter your comment" autofocus /><br />
+    <textarea id="text" type="text" class="comment" placeholder="Enter your comment" autofocus /><br />
     <button id="createComment">save</button>
     <ul class="comments">
         {{#each this}}
