--- a/app/comments/commentsTemplate.hbs
+++ b/app/comments/commentsTemplate.hbs
@@ -6,7 +6,7 @@
             <li id="{{ id }}" class="comment">
                 Posted {{ time }} by {{ user }}<br />
                 <p id="text">{{ text }}</p>
-                <p><a href="#" id="editComment" data-id="{{ id }}">edit</a>  <a href="#" id="deleteComment" data-id="{{ id }}">delete</a></p>
+                <p><a href="#" id="editComment" data-id="{{ id }}">edit</a> <a href="#" id="cancelEdit" style="display: none" data-id="{{ id }}">cancel</a> <a href="#" id="deleteComment" data-id="{{ id }}">delete</a></p>
             </li>
         {{/each}}
     </ul>
