--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -10,4 +10,5 @@
 @import "_app.scss";        // Base app styles (body, etc)
 @import "_images.scss";     // Anything related to images
 @import "_comments.scss";   // Comments
+@import "_shots.scss";      // Shots
 // Trey - Feel free to re-organize this structure however you see fit. 
