--- a/app/shots/shotTemplate.hbs
+++ b/app/shots/shotTemplate.hbs
@@ -1,11 +1,11 @@
 <a href="/#{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
-<img src="{{ image }}" id="image" class="shot">
-<p id="text">{{ text }}</p>
+<img src="{{ image }}" id="shotImage" class="shot">
+<p id="shotText">{{ text }}</p>
 <p>
-  <a href="#" id="edit" data-id="{{ id }}">edit</a> 
-  <a href="#" id="cancel" style="display: none" data-id="{{ id }}">cancel</a> 
-  <button id="save" data-id="{{ id }}">Save</button> 
-  <a href="#" id="delete" data-id="{{ id }}">delete</a>
+  <a href="#" id="editShot" data-id="{{ id }}">edit</a> 
+  <a href="#" id="cancelShotEdit" style="display: none" data-id="{{ id }}">cancel</a> 
+  <button id="saveShot" data-id="{{ id }}">Save</button> 
+  <a href="#" id="deleteShot" data-id="{{ id }}">delete</a>
 </p>
 <ul id="{{ id }}" class="comments">
 </ul>
