--- a/server/views/client.handlebars
+++ b/server/views/client.handlebars
@@ -3,9 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js" type="text/javascript"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js" type="text/javascript"></script>
+    <script src="lib/jquery-2.1.0.min.js" type="text/javascript"></script>
+    <script src="lib/underscore.js" type="text/javascript"></script>
+    <script src="lib/backbone.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backfire/0.3.0/backbone-firebase.js"></script>
     <script type='text/javascript'
