--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -11,4 +11,4 @@
 @import "_images.scss";     // Anything related to images
 @import "_comments.scss";   // Comments
 @import "_shots.scss";      // Shots
-// Trey - Feel free to re-organize this structure however you see fit. 
+@import "_base.scss";		// Base Styling
