Fix for jsdom issue, user cannot post without login test passes

--- a/server/static/css/screen.css
+++ b/server/static/css/screen.css
@@ -110,18 +110,23 @@ img.shot.big {
   width: 50%;
 }
 
-/* line 9, ../../../app/sass/_shots.scss */
+/* line 8, ../../../app/sass/_shots.scss */
+#shotsError {
+  display: none;
+}
+
+/* line 13, ../../../app/sass/_shots.scss */
 .shot p #saveShot {
   /* Save button is hidden until editing is enabled */
   display: none;
 }
-/* line 14, ../../../app/sass/_shots.scss */
+/* line 18, ../../../app/sass/_shots.scss */
 .shot p #cancelShotEdit {
   /* Cancel button is hidden until editing is enabled */
   display: none;
 }
 
-/* line 20, ../../../app/sass/_shots.scss */
+/* line 24, ../../../app/sass/_shots.scss */
 [contenteditable="true"] {
   background: yellow;
 }
