Signed out user can no longer add comments #5 (with tests)

--- a/app/components/comments/commentsTemplate.hbs
+++ b/app/components/comments/commentsTemplate.hbs
@@ -1,5 +1,6 @@
     <label><h3>{{ this.length }} {{pluralize this.length 'Comment' 'Comments'}}</h3></label>
     <textarea id="text" type="text" class="comment" placeholder="Enter your comment" /><br />
     <button id="createComment">save</button>
+    <label id="commentsError" class="error"></label>
     <ul class="comments">
     </ul>
