--- a/server/static/css/screen.css
+++ b/server/static/css/screen.css
@@ -110,23 +110,18 @@ img.shot.big {
   width: 50%;
 }
 
-/* line 8, ../../../app/sass/_shots.scss */
-#shotsError {
-  display: none;
-}
-
-/* line 13, ../../../app/sass/_shots.scss */
+/* line 9, ../../../app/sass/_shots.scss */
 .shot p #saveShot {
   /* Save button is hidden until editing is enabled */
   display: none;
 }
-/* line 18, ../../../app/sass/_shots.scss */
+/* line 14, ../../../app/sass/_shots.scss */
 .shot p #cancelShotEdit {
   /* Cancel button is hidden until editing is enabled */
   display: none;
 }
 
-/* line 24, ../../../app/sass/_shots.scss */
+/* line 20, ../../../app/sass/_shots.scss */
 [contenteditable="true"] {
   background: yellow;
 }
@@ -156,4 +151,9 @@ img.shot.big {
 /* line 18, ../../../app/sass/_base.scss */
 #logout {
   float: right;
+}
+
+/* line 23, ../../../app/sass/_base.scss */
+.error {
+  display: none;
 }
