--- a/app/components/projects/projectsTemplate.hbs
+++ b/app/components/projects/projectsTemplate.hbs
@@ -1,10 +1,8 @@
   <div class="view">
     <label><h3>Create a Project</h3></label>
     <input id="name" type="textarea" class"input" placeholder="" autofocus>
-    <button class="save">save</button>
+    <button id="createProject" class="save">save</button>
+    <label id="projectsError" class="error"></label>
     <ul class="projects">
-      {{#each this}}
-        <li class="project"><a href="#" id="{{ id }}" data-event="Show Project" data-id="{{ id }}">{{ id }}</a></li>
-      {{/each}}
     </ul>
   </div> 
