Added tests for Comment Model to make sure users can't edit each others comments

--- a/app/components/comments/commentTemplate.hbs
+++ b/app/components/comments/commentTemplate.hbs
@@ -2,9 +2,11 @@
     Posted {{ time }} by {{ user }}<br />
     <p id="commentText">{{ text }}</p>
     <p>
+      {{#if owner}}
       <a href="#" id="editComment" data-id="{{ id }}">edit</a> 
       <a href="#" id="cancelCommentEdit" style="display: none" data-id="{{ id }}">cancel</a> 
       <button id="saveComment" data-id="{{ id }}">Save</button>
       <a href="#" id="deleteComment" data-id="{{ id }}">delete</a>
+      {{/if}}
     </p>
 </li>
