--- a/app/components/nav/navTemplate.hbs
+++ b/app/components/nav/navTemplate.hbs
@@ -1,4 +1,4 @@
-  <a href="/#" id="home">Home</a> |  
+  <a href="/" id="home">Home</a> |  
   <a href="http://discuss.braddickason.com" id="discuss">Discuss</a> | 
   <a href="#contribute" id="contribute">Contribute</a> | 
   <a href="#help" id="help">Help Me!</a>
