Updated all links to stop using hashes (#)

--- a/app/components/contribute/contributeTemplate.hbs
+++ b/app/components/contribute/contributeTemplate.hbs
@@ -2,6 +2,8 @@
   
 <h2>Designer</h2>
 
+<a href="http://discuss.braddickason.com" target="_blank">Tell us what you want to change. We'll take a look and figure out how you can contribute!</a>
+
 <h2>Developer</h2>
 
 <a href="http://github.com/bdickason/shots" target="_blank">Check us out on Github.</a>
