--- a/app/components/nav/navTemplate.hbs
+++ b/app/components/nav/navTemplate.hbs
@@ -1,12 +1,12 @@
   <a href="/" id="home">Home</a> |  
   <a href="http://discuss.braddickason.com" id="discuss">Discuss</a> | 
-  <a href="#contribute" id="contribute">Contribute</a> | 
-  <a href="#help" id="help">Help Me!</a>
+  <a href="/contribute" id="contribute">Contribute</a> | 
+  <a href="/help" id="help">Help Me!</a>
 
   {{#if username}}
   {{! Check if user is logged in }}
     <a href="#" id="username">@{{username}}</a>
-    <a href="#" id="logout">Logout</a>
+    <a href="/logout" id="logout">Logout</a>
   {{else}}
-    <a href="#" id="login">Login</a>
+    <a href="/login" id="login">Login</a>
   {{/if}}
