--- a/server/views/client.handlebars
+++ b/server/views/client.handlebars
@@ -3,17 +3,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="lib/jquery-2.1.0.min.js" type="text/javascript"></script>
-    <script src="lib/underscore.js" type="text/javascript"></script>
-    <script src="lib/backbone.js" type="text/javascript"></script>
+    <script src="/lib/jquery-2.1.0.min.js" type="text/javascript"></script>
+    <script src="/lib/underscore.js" type="text/javascript"></script>
+    <script src="/lib/backbone.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backfire/0.3.0/backbone-firebase.js"></script>
     <script type='text/javascript'
         src='https://cdn.firebase.com/js/simple-login/1.2.5/firebase-simple-login.js'></script>
 
-    <script src="lib/bundle.js" type="text/javascript"></script>
+    <script src="/lib/bundle.js" type="text/javascript"></script>
 
-    <link href="css/screen.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/css/screen.css" media="all" rel="stylesheet" type="text/css" />
 
     {{! pass in config variables from server }}
     <!-- start Mixpanel -->
