--- a/server/views/client.handlebars
+++ b/server/views/client.handlebars
@@ -6,6 +6,7 @@
     <script src="/lib/jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="/lib/underscore.js" type="text/javascript"></script>
     <script src="/lib/backbone.js" type="text/javascript"></script>
+    <script src="/lib/backbone.marionette.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backfire/0.3.0/backbone-firebase.js"></script>
     <script type='text/javascript'
