Added basic styling for project details area

--- a/app/components/projects/show/projectTemplate.hbs
+++ b/app/components/projects/show/projectTemplate.hbs
@@ -1,4 +1,4 @@
-<container class="projectDetails">
+<div class="projectDetails">
   <h1>{{ id }}</h1>
   {{#if owner}}
     <p class="projectSettings">
