--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -11,4 +11,5 @@
 @import "_images.scss";     // Anything related to images
 @import "_comments.scss";   // Comments
 @import "_shots.scss";      // Shots
+@import "_projects.scss";   // Projects
 @import "_base.scss";		// Base Styling
