responsive single-shot layout & responsive images

--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -16,7 +16,14 @@
 	padding-right: 15px;
 }
 #logout {
-	float:right;
+	float: right;
+}
+
+.shot {
+  max-width:  60%;
+  margin: 0 20%;
+  float: left;
+
 }
 
 // Error messages should not be shown by default
