--- a/app/components/shots/show/shotTemplate.hbs
+++ b/app/components/shots/show/shotTemplate.hbs
@@ -1,5 +1,5 @@
 <a href="/{{ projectId }}/{{ id }}" class="shotlink" id="{{ projectId }}/{{ id }}">Posted {{ time }} by {{ user }}</a><br />
-<img src="{{ image }}" id="shotImage" class="shot">
+<img src="{{ image }}" id="shotImage">
 <p id="shotText">{{ text }}</p>
 {{#if owner}}
   <p class="shotSettings">
